# rinha-backend

./: Dockerfile  docker-compose.override.yml  docker-compose.yml  init.sql  pyproject.toml
results/first_result/: index.html  req_cre-ditos-1306955929.html  req_de-bitos-1025427916.html  req_extratos--1809255608.html  req_validac-o-es--40002687.html
results/first_result/js/: all_sessions.js  assertions.xml  global_stats.json  stats.js  stats.json
src/: main.py
src/api/: main.py
src/api/routes/: extratos.py  transacoes.py
src/core/: db.py
src/rinha/: main.py  model.py
